tests/errors/first_stage/.data/comma_expected/comma_expected.as
; a comma is expected between two .data arguments
myData: .data 1, 2 3, 4